--- a/android/app/src/main/res/layout/splash_view.xml
+++ b/android/app/src/main/res/layout/splash_view.xml
@@ -4,19 +4,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    android:background="@color/myBackgroundColor"
     android:gravity="center_horizontal">
 
     <com.airbnb.lottie.LottieAnimationView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:lottie_autoPlay="true"
-        android:scaleType="centerCrop"
-        app:lottie_rawRes="@raw/splash_screen"
         app:lottie_loop="false"
+        app:lottie_rawRes="@raw/splash_screen"
         app:lottie_speed="1.00" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
